--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,12 @@ body {
   object-fit: cover;
 }
 
+.hero-video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .hero-text {
   position: absolute;
   bottom: 2%;
