--- a/src/App.css
+++ b/src/App.css
@@ -124,7 +124,7 @@ body {
 /* Hero Section Styles */
 .hero-slide {
   position: relative;
-  height: 40vh;
+  height: 70vh; /* Increase the height for a larger banner */
 }
 
 .hero-img {
@@ -147,7 +147,7 @@ body {
 }
 
 .hero-text h1 {
-  font-size: 2.5rem;
+  font-size: 4rem; /* Increase font size for larger text */
   font-style: bold;
   margin: 0;
   padding: 0;
@@ -156,7 +156,7 @@ body {
 }
 
 .hero-text p {
-  font-size: 1.5rem;
+  font-size: 2rem; /* Increase font size for larger text */
   margin: 0;
   color: rgb(234, 246, 6);
   -webkit-text-stroke: 1.2px rgb(14, 13, 13);
