--- a/src/App.css
+++ b/src/App.css
@@ -18,14 +18,26 @@ body {
 }
 
 /* Background Video */
-.background-video {
+.background-video-container {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  overflow: hidden;
   z-index: -1; /* Place the video behind the content */
+}
+
+.background-video {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: auto;
+  height: auto;
+  min-width: 100%;
+  min-height: 100%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
 }
 
 /* Header Styles */
