--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
   color: #e705b3;
   margin: 0;
   padding: 0;
-  overflow: hidden; /* Prevent scroll bars from showing */
+
 }
 
 /* App Layout */
@@ -150,16 +150,11 @@ body {
 /* Hero Section Styles */
 .hero-slide {
   position: relative;
-  height: 70vh; /* Increase the height for a larger banner */
+  height: 40vh;
+  background: rgba(0, 0, 0, 0.65); /* Set background color with opacity */
 }
 
 .hero-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-
-.hero-video {
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -173,7 +168,7 @@ body {
 }
 
 .hero-text h1 {
-  font-size: 4rem; /* Increase font size for larger text */
+  font-size: 2.5rem;
   font-style: bold;
   margin: 0;
   padding: 0;
@@ -182,7 +177,7 @@ body {
 }
 
 .hero-text p {
-  font-size: 2rem; /* Increase font size for larger text */
+  font-size: 1.5rem;
   margin: 0;
   color: rgb(234, 246, 6);
   -webkit-text-stroke: 1.2px rgb(14, 13, 13);
