--- a/src/App.css
+++ b/src/App.css
@@ -12,36 +12,11 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  position: relative;
-  z-index: 1; /* Ensure the content is on top of the background video */
-}
-
-/* Background Video */
-.background-video-container {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  z-index: -1; /* Place the video behind the content */
-}
-
-.background-video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: auto;
-  height: auto;
-  min-width: 100%;
-  min-height: 100%;
-  transform: translate(-50%, -50%);
-  object-fit: cover;
 }
 
 /* Header Styles */
 .header {
-  background-color: rgba(0, 0, 0, 0.8); /* Set background color with opacity */
+  background-color: black;
   color: rgb(242, 0, 125);
   padding: 0.5rem 1rem;
   display: flex;
@@ -49,8 +24,6 @@ body {
   align-items: center;
   border-bottom: 8px solid rgb(217, 0, 255);
   flex-wrap: wrap;
-  position: relative;
-  z-index: 1;
 }
 
 .logo-container {
@@ -152,8 +125,6 @@ body {
 .hero-slide {
   position: relative;
   height: 40vh;
-  background: rgba(0, 0, 0, 0.65); /* Set background color with opacity */
-  z-index: 1;
 }
 
 .hero-img {
@@ -188,12 +159,10 @@ body {
 
 /* New Section Below Hero Banner */
 .hero-banner-bottom {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: black;
   color: white;
   text-align: center;
   padding: 1rem 0;
-  position: relative;
-  z-index: 1;
 }
 
 .hero-banner-bottom h1 {
@@ -212,8 +181,6 @@ body {
   padding: 2rem;
   background-color: black;
   color: white;
-  position: relative;
-  z-index: 1;
 }
 
 .featured-header {
@@ -289,8 +256,6 @@ body {
 /* Movie List Styles */
 .movie-list {
   padding: 2rem;
-  position: relative;
-  z-index: 1;
 }
 
 .movie-list .grid {
@@ -329,8 +294,6 @@ body {
 /* TV Show List Styles */
 .tvshow-list {
   padding: 2rem;
-  position: relative;
-  z-index: 1;
 }
 
 .tvshow-list .grid {
@@ -375,7 +338,6 @@ body {
   flex-direction: column;
   align-items: center;
   position: relative;
-  z-index: 1;
 }
 
 .movie-detail-header {
@@ -454,8 +416,6 @@ body {
   background-color: black;
   color: white;
   margin: 1rem 0;
-  position: relative;
-  z-index: 1;
 }
 
 .content-section h2 {
@@ -520,8 +480,6 @@ body {
   height: calc(100vh - 60px);
   background-color: black;
   padding-top: 2rem; /* Adjust to move the form higher */
-  position: relative;
-  z-index: 1;
 }
 
 .form {
@@ -599,8 +557,6 @@ body {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  position: relative;
-  z-index: 1;
 }
 
 .footer-section {
@@ -676,6 +632,7 @@ body {
   padding: 2rem;
   text-align: center;
 }
+
 .dashboard h2 {
   font-size: 2rem;
   color: magenta;
