--- a/src/App.css
+++ b/src/App.css
@@ -596,32 +596,138 @@ body {
 }
 
 @media (max-width: 768px) {
-  .footer {
+  .header {
+    padding: 0.5rem;
     flex-direction: column;
   }
 
-  .footer-section {
-    margin-bottom: 2rem;
+  .logo-img {
+    height: 60px;
   }
-}
 
-/* Responsive Design */
-@media (max-width: 768px) {
-  .featured-grid, .actor-spotlight, .cinema-spotlight {
-    flex-wrap: nowrap;
-    justify-content: center;
+  .logo-text {
+    font-size: 2rem;
   }
 
   .nav-links {
     flex-direction: column;
+    align-items: center;
   }
 
   .nav-links li {
     margin: 0.5rem 0;
   }
 
-  .featured-item, .spotlight-item {
-    width: 40vw; /* Maintain width for featured items */
+  .search-form {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .search-input,
+  .search-button {
+    width: 100%;
+    border-radius: 4px;
+    margin-bottom: 0.5rem;
+  }
+
+  .user-name,
+  .logout-button {
+    margin-left: 0;
+    margin-top: 0.5rem;
+  }
+
+  .hero-slide {
+    height: 50vh;
+  }
+
+  .hero-text h1 {
+    font-size: 1.8rem;
+    -webkit-text-stroke: 2px rgb(4, 5, 4);
+  }
+
+  .hero-text p {
+    font-size: 1rem;
+    -webkit-text-stroke: 1px rgb(14, 13, 13);
+  }
+
+  .featured-item {
+    width: 45%;
+  }
+
+  .movie-item {
+    width: 45%;
+  }
+
+  .tvshow-item {
+    width: 45%;
+  }
+
+  .form {
+    padding: 1.5rem;
+    border-width: 3px;
+  }
+
+  .form h2 {
+    font-size: 1.5rem;
+  }
+
+  .form label {
+    font-size: 1rem;
+  }
+
+  .form input {
+    padding: 0.5rem;
+  }
+
+  .form button {
+    padding: 0.8rem;
+    font-size: 1rem;
+  }
+
+  .signup-link {
+    font-size: 1rem;
+  }
+
+  .footer {
+    flex-direction: column;
+    padding: 1rem;
+  }
+
+  .footer-section {
+    margin-bottom: 1rem;
+  }
+
+  .footer h4 {
+    font-size: 1.5rem;
+  }
+}
+
+/* Responsive Design */
+@media (max-width: 1024px) {
+  .featured-item {
+    width: 30%;
+  }
+
+  .movie-item {
+    width: 30%;
+  }
+
+  .tvshow-item {
+    width: 30%;
+  }
+}
+
+@media (max-width: 576px) {
+  .featured-item {
+    width: 100%;
+  }
+
+  .movie-item {
+    width: 100%;
+  }
+
+  .tvshow-item {
+    width: 100%;
   }
 }
 
