--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ body {
   color: #e705b3;
   margin: 0;
   padding: 0;
+  box-sizing: border-box; /* Add this to ensure padding and border are included in the element's total width and height */
 }
 
 /* App Layout */
@@ -37,12 +38,12 @@ body {
 }
 
 .logo-img {
-  height: 80px;
+  height: 60px; /* Adjusted for better responsiveness */
   margin-right: 10px;
 }
 
 .logo-text {
-  font-size: 2.5rem;
+  font-size: 2rem; /* Adjusted for better responsiveness */
   font-family: "URW Chancery L", cursive;
   font-weight: bold;
   color: rgb(242, 0, 125);
@@ -130,7 +131,7 @@ body {
 .hero-slide {
   position: relative;
   height: 40vh;
-  margin-top: 60px; /* Adjusted to account for the fixed header */
+  margin-top: 80px; /* Adjusted to account for the fixed header */
 }
 
 .hero-img {
@@ -344,6 +345,7 @@ body {
   flex-direction: column;
   align-items: center;
   position: relative;
+  box-sizing: border-box;
 }
 
 .movie-detail-header {
@@ -354,6 +356,7 @@ body {
   overflow: hidden;
   z-index: 1;
   margin-bottom: 2rem;
+  box-sizing: border-box;
 }
 
 .movie-detail-poster {
@@ -645,7 +648,7 @@ body {
 
   .hero-slide {
     height: 50vh;
-    margin-top: 60px; /* Adjusted to account for the fixed header */
+    margin-top: 80px; /* Adjusted to account for the fixed header */
   }
 
   .hero-text h1 {
@@ -710,7 +713,6 @@ body {
   }
 }
 
-/* Responsive Design */
 @media (max-width: 1024px) {
   .featured-item {
     width: 30%;
