--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,6 @@ body {
   justify-content: space-between;
   align-items: center;
   border-bottom: 8px solid rgb(217, 0, 255);
-  flex-wrap: wrap;
   position: fixed;
   top: 0;
   width: 100%;
@@ -608,7 +607,8 @@ body {
 @media (max-width: 768px) {
   .header {
     padding: 0.5rem;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: nowrap;
   }
 
   .logo-img {
@@ -620,30 +620,31 @@ body {
   }
 
   .nav-links {
-    flex-direction: column;
-    align-items: center;
+    flex-wrap: nowrap;
+    flex: 1;
+    justify-content: center;
   }
 
   .nav-links li {
-    margin: 0.5rem 0;
+    margin: 0.5rem 1rem;
   }
 
   .search-form {
-    flex-direction: column;
-    width: 100%;
+    flex-wrap: nowrap;
+    justify-content: flex-end;
   }
 
   .search-input,
   .search-button {
-    width: 100%;
+    width: auto;
     border-radius: 4px;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0;
   }
 
   .user-name,
   .logout-button {
-    margin-left: 0;
-    margin-top: 0.5rem;
+    margin-left: 1rem;
+    margin-top: 0;
   }
 
   .hero-slide {
