--- a/src/App.css
+++ b/src/App.css
@@ -88,12 +88,22 @@ body {
   border-radius: 4px;
   flex-grow: 1;
   max-width: 50%;
+  position: relative;
+}
+
+.search-form::before {
+  content: "\f002"; /* FontAwesome search icon unicode */
+  font-family: "FontAwesome";
+  position: absolute;
+  left: 10px;
+  font-size: 1.5vh;
+  color: white;
 }
 
 .search-input {
-  padding: 0.5rem;
+  padding: 0.5rem 0.5rem 0.5rem 2rem; /* Add padding-left for icon space */
   font-size: 1.5vh;
-  border: none;
+  border: 1px solid magenta; /* Updated border color */
   border-radius: 4px 0 0 4px;
   outline: none;
   flex-grow: 1;
@@ -111,6 +121,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-right: 1in;
 }
 
 .search-button:hover {
