--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,15 @@ body {
   position: relative;
 }
 
+.search-form::before {
+  content: "\f002"; /* FontAwesome search icon unicode */
+  font-family: "FontAwesome";
+  position: absolute;
+  left: 10px;
+  font-size: 1.5vh;
+  color: white;
+}
+
 .search-input {
   padding: 0.5rem 0.5rem 0.5rem 2rem; /* Add padding-left for icon space */
   font-size: 1.5vh;
@@ -111,10 +120,16 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-right: 1in;
 }
 
 .search-button:hover {
   background-color: transparent;
+}
+
+.search-icon {
+  font-size: 2vh;
+  margin-right: 0.5rem;
 }
 
 .user-name {
@@ -230,19 +245,20 @@ body {
 
 .featured-grid {
   display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-  justify-content: center;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  padding: 1rem 0;
 }
 
 .featured-item {
   background: #29292a;
   padding: 0.5rem;
-  margin: 0.5rem;
+  margin-right: 1rem;
   border-radius: 8px;
   transition: transform 0.3s;
-  flex: 0 0 15%;
-  max-width: 18vw;
+  flex: 0 0 auto;
+  width: 18vw;
   min-width: 150px;
 }
 
@@ -250,7 +266,7 @@ body {
   width: 100%;
   height: auto;
   aspect-ratio: 3 / 4;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 4px;
 }
 
@@ -283,7 +299,7 @@ body {
 .movie-list .grid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   gap: 1rem;
 }
 
@@ -292,9 +308,7 @@ body {
   padding: 1rem;
   border: 1px solid #ccc;
   border-radius: 8px;
-  flex: 0 0 15%;
-  max-width: 18vw;
-  min-width: 150px;
+  width: 23%;
   transition: transform 0.3s;
 }
 
@@ -302,15 +316,13 @@ body {
   width: 100%;
   height: auto;
   aspect-ratio: 3 / 4;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 8px;
 }
 
 .movie-item h3 {
   margin-top: 0.5rem;
   color: black;
-  font-size: 1.2vh;
-  text-align: center;
 }
 
 .movie-item:hover {
@@ -325,7 +337,7 @@ body {
 .tvshow-list .grid {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
   gap: 1rem;
 }
 
@@ -334,9 +346,7 @@ body {
   padding: 1rem;
   border: 1px solid #ccc;
   border-radius: 8px;
-  flex: 0 0 15%;
-  max-width: 18vw;
-  min-width: 150px;
+  width: 23%;
   transition: transform 0.3s;
 }
 
@@ -344,15 +354,13 @@ body {
   width: 100%;
   height: auto;
   aspect-ratio: 3 / 4;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 8px;
 }
 
 .tvshow-item h3 {
   margin-top: 0.5rem;
   color: black;
-  font-size: 1.2vh;
-  text-align: center;
 }
 
 .tvshow-item:hover {
@@ -373,7 +381,6 @@ body {
 
 .movie-detail-header {
   display: flex;
-  flex-direction: column;
   width: 100%;
   background-color: #1c1c1c;
   border-radius: 12px;
@@ -398,8 +405,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  text-align: center;
 }
 
 .movie-detail-info h2 {
