--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ body {
   width: 100%;
   box-sizing: border-box;
   position: relative;
+  height: 0.8in;
 }
 
 .logo-container {
@@ -86,9 +87,9 @@ body {
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 4px;
   position: absolute;
-  bottom: -20px; /* Adjust as needed */
+  top: 50%; /* Adjust as needed */
   left: 50%;
-  transform: translateX(-50%);
+  transform: translate(-50%, -50%);
   width: 50%; /* Adjust as needed */
 }
 
