--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,6 @@ body {
   width: 100%;
   box-sizing: border-box;
   position: relative;
-  height: 0.8in;
 }
 
 .logo-container {
@@ -87,9 +86,9 @@ body {
   background-color: rgba(0, 0, 0, 0.7);
   border-radius: 4px;
   position: absolute;
-  top: 50%; /* Adjust as needed */
+  bottom: -20px; /* Adjust as needed */
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
   width: 50%; /* Adjust as needed */
 }
 
